objects/Position_approval_matrix__c.object
<CustomObject>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Position_approval_matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Position_approval_matrices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Position_approval_matrices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_key__c</fullName>
        <label>Routing key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Position approval matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RoutingID-{000}</displayFormat>
        <label>Position approval matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position approval matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>